--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1125,6 +1125,10 @@ article.active {
   font-weight: var(--fw-300);
   line-height: 1.6;
 }
+.timeline-text strong,
+.timeline-text b {
+  font-weight: bold !important;
+}
 
 
 /**
